Ensure links have enough contrast (#1054)

--- a/theme/base/stylesheets/pages/front-page/page.scss
+++ b/theme/base/stylesheets/pages/front-page/page.scss
@@ -40,7 +40,7 @@ blockquote {
 }
 
 a {
-  color: $blue;
+  color: $contrastBlue;
 
   &:hover{
     text-decoration: underline;
